feat(dashboard-graph): graph plot with type

--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -65,27 +65,26 @@
                     label='Registered Users'>
                   </hidden-innovation-line-chart>
                 </div>
-
                 <div class='col-lg-2 p-0 d-flex flex-column' >
                   <mat-card class='mb-5'  (click)='showRegisteredUserData(dashboardRangeFilterEnum.MONTHLY)' >
                     <mat-card-content  class='text-center'>
                       <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Monthly</h3>
-                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>{{registerUserData(dashboardRangeFilterEnum.MONTHLY)}}</h1>
-                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+12.1%</h4>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>{{_dummyRegisteresUserData.monthly.total}}</h1>
+                      <h4 class='mb-2 mat-h4 text-color__success font-calibri' >{{_dummyRegisteresUserData.monthly.changePer}}%</h4>
                     </mat-card-content>
                   </mat-card>
                   <mat-card class=' mb-5' mat-ripple (click)='showRegisteredUserData(dashboardRangeFilterEnum.WEEKLY)'>
                     <mat-card-content class='text-center'>
                       <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Weekly</h3>
-                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #C49ED4'>{{registerUserData(dashboardRangeFilterEnum.WEEKLY)}}</h1>
-                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+9.4%</h4>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #C49ED4'>{{_dummyRegisteresUserData.weekly.total}}</h1>
+                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>{{_dummyRegisteresUserData.weekly.changePer}}%</h4>
                     </mat-card-content>
                   </mat-card>
                   <mat-card class=' mb-5' mat-ripple (click)='showRegisteredUserData(dashboardRangeFilterEnum.DAILY)'>
                     <mat-card-content class='text-center'>
                       <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Daily</h3>
-                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>{{registerUserData(dashboardRangeFilterEnum.DAILY)}}</h1>
-                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+16.4%</h4>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>{{_dummyRegisteresUserData.daily.total}}</h1>
+                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>{{_dummyRegisteresUserData.daily.changePer}}%</h4>
                     </mat-card-content>
                   </mat-card>
                 </div>
@@ -106,22 +105,22 @@
                   <mat-card class=' mb-5' mat-ripple (click)='showActiveUserData(dashboardRangeFilterEnum.MONTHLY)'>
                     <mat-card-content class='text-center' >
                       <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Monthly</h3>
-                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>16k</h1>
-                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+12.1%</h4>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>{{_dummyActiveUserData.monthly.total}}</h1>
+                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>{{_dummyActiveUserData.monthly.changePer}}%</h4>
                     </mat-card-content>
                   </mat-card>
                   <mat-card class=' mb-5' mat-ripple (click)='showActiveUserData(dashboardRangeFilterEnum.WEEKLY)'>
                     <mat-card-content class='text-center'>
                       <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Weekly</h3>
-                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #C49ED4'>5.8k</h1>
-                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+9.4%</h4>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #C49ED4'>{{_dummyActiveUserData.weekly.total}}</h1>
+                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>{{_dummyActiveUserData.weekly.changePer}}%</h4>
                     </mat-card-content>
                   </mat-card>
                   <mat-card class=' mb-5' mat-ripple (click)='showActiveUserData(dashboardRangeFilterEnum.DAILY)'>
                     <mat-card-content class='text-center'>
                       <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Daily</h3>
-                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>1.6k</h1>
-                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+16.4%</h4>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>{{_dummyActiveUserData.daily.total}}</h1>
+                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>{{_dummyActiveUserData.daily.changePer}}%</h4>
                     </mat-card-content>
                   </mat-card>
                 </div>
