feat(OH-818-test-selector): Add isAllSelector indicator in test selector for both single and content selection

--- a/libs/shared/ui/test-selector/src/lib/test-selector.component.html
+++ b/libs/shared/ui/test-selector/src/lib/test-selector.component.html
@@ -48,6 +48,10 @@
 
                   <ng-container matColumnDef='select'>
                     <th mat-header-cell *matHeaderCellDef>
+                      <mat-checkbox (change)="null"
+                                    [checked]="isAllSelected()"
+                                    [indeterminate]="!isAllSelected()">
+                      </mat-checkbox>
                     </th>
                     <td mat-cell *matCellDef='let test'>
                       <mat-checkbox
