feat(test-group): Add selected state checkbox in test group single and other module

--- a/libs/shared/ui/test-selector/src/lib/test-selector.component.html
+++ b/libs/shared/ui/test-selector/src/lib/test-selector.component.html
@@ -48,7 +48,7 @@
 
                   <ng-container matColumnDef='select'>
                     <th mat-header-cell *matHeaderCellDef>
-                      <mat-checkbox (change)="null"
+                      <mat-checkbox [disabled]='true'
                                     [checked]="isAllSelected()"
                                     [indeterminate]="!isAllSelected()">
                       </mat-checkbox>
