--- a/libs/shared/ui/pack-selector/src/lib/pack-selector.component.html
+++ b/libs/shared/ui/pack-selector/src/lib/pack-selector.component.html
@@ -40,6 +40,10 @@
 
                   <ng-container matColumnDef='select'>
                     <th mat-header-cell [width]='75' *matHeaderCellDef>
+                      <mat-checkbox [disabled]='true'
+                                    [checked]="isAllSelected()"
+                                    [indeterminate]="!isAllSelected()">
+                      </mat-checkbox>
                     </th>
                     <td mat-cell *matCellDef='let pack'>
                       <mat-checkbox
