--- a/libs/shared/ui/test-selector/src/lib/test-selector.component.html
+++ b/libs/shared/ui/test-selector/src/lib/test-selector.component.html
@@ -1,9 +1,9 @@
 <div mat-dialog-title>
   <div class='d-flex align-items-center justify-content-between'>
     <h4 class='mat-h4 text-uppercase text-color__primary mb-0 mr-4 font-calibri font-weight-normal'>
-      <ng-template [ngIf]='this.categoryData.type === contentSelectorOpType.SINGLE' [ngIfElse]='elseTitle'>
-        <ng-template [ngIf]='!this.categoryData?.limit' [ngIfElse]='elseTitle'>
-          ADD TEST SINGLE <span>{{categoryData ? " OF TYPE -  "+(categoryData?.category | titlecase) : "--"}}</span>
+      <ng-template [ngIfElse]='elseTitle' [ngIf]='this.categoryData.type === contentSelectorOpType.SINGLE'>
+        <ng-template [ngIfElse]='elseTitle' [ngIf]='!this.categoryData?.limit'>
+          ADD TEST SINGLE <span>{{categoryData ? " OF TYPE -  " + (categoryData?.category | titlecase) : "--"}}</span>
         </ng-template>
       </ng-template>
       <ng-template #elseTitle>
@@ -15,7 +15,7 @@
         <mat-icon class='text-success mr-2'>autorenew</mat-icon>
         <h4 class='text-success mat-h4 mb-0'>Selection Auto-Saved</h4>
       </div>
-      <button mat-flat-button color='primary' mat-dialog-close>
+      <button color='primary' mat-dialog-close mat-flat-button>
         {{constantDataService.BUTTON_NAME.DONE | titlecase}}
       </button>
     </div>
@@ -26,15 +26,15 @@
     <div class='col-3'>
       <mat-form-field class='w-100'>
         <mat-label>Search</mat-label>
-        <input matInput autocomplete='off' [formControl]='filters.controls.search'>
-        <button mat-icon-button matSuffix *ngIf='filters.controls.search.value'
-                (click)='filters.controls.search.setValue("")'>
+        <input [formControl]='filters.controls.search' autocomplete='off' matInput>
+        <button (click)='filters.controls.search.setValue("")' *ngIf='filters.controls.search.value' mat-icon-button
+                matSuffix>
           <mat-icon style='font-size: 14px'>close</mat-icon>
         </button>
       </mat-form-field>
     </div>
     <div class='col d-flex align-items-center justify-content-end'>
-      <mat-spinner class='mr-4' [diameter]='20' *ngIf='store.isLoading$ | async'></mat-spinner>
+      <mat-spinner *ngIf='store.isLoading$ | async' [diameter]='20' class='mr-4'></mat-spinner>
     </div>
   </div>
   <div class='row'>
@@ -44,75 +44,81 @@
           <div class='container-fluid p-0'>
             <div class='row'>
               <div class='col-12'>
-                <table mat-table [dataSource]='tests' [trackBy]='trackById' class='w-100'>
+                <table [dataSource]='tests' [trackBy]='trackById' class='w-100' mat-table>
 
                   <ng-container matColumnDef='select'>
-                    <th mat-header-cell *matHeaderCellDef>
-                      <mat-checkbox [disabled]='true'
-                                    [checked]="isAllSelected()"
-                                    [indeterminate]="!isAllSelected()">
+                    <th *matHeaderCellDef mat-header-cell>
+                      <mat-checkbox
+                        *ngIf='!categoryData?.limit'
+                        (change)='masterToggle()'
+                        [checked]='isAllSelected'
+                        [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'
+                        [indeterminate]='!isAllSelected'
+                        color='primary'>
                       </mat-checkbox>
                     </th>
-                    <td mat-cell *matCellDef='let test'>
+                    <td *matCellDef='let test' mat-cell>
                       <mat-checkbox
-                        [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'
-                        color='primary'
-                        (click)='$event.stopPropagation()'
                         (change)='$event ? addToList(test) : null'
-                        [checked]='isSelected(test)'>
+                        (click)='$event.stopPropagation()'
+                        [checked]='isSelected(test)'
+                        [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'
+                        color='primary'>
                       </mat-checkbox>
                     </td>
                   </ng-container>
 
                   <ng-container matColumnDef='id'>
-                    <th mat-header-cell [width]='70'
-                        *matHeaderCellDef>{{constantDataService.FIELD_NAME.ID | titlecase}}</th>
-                    <td mat-cell *matCellDef='let element'> {{element.id ?? '--'}} </td>
+                    <th *matHeaderCellDef [width]='70'
+                        mat-header-cell>{{constantDataService.FIELD_NAME.ID | titlecase}}</th>
+                    <td *matCellDef='let element' mat-cell> {{element.id ?? '--'}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef='name'>
-                    <th mat-header-cell *matHeaderCellDef>
+                    <th *matHeaderCellDef mat-header-cell>
                       <hidden-innovation-sorting-header-name
-                        [title]='constantDataService.FIELD_NAME.NAME | titlecase'
+                        (emitSorting)='updateSorting("nameSort")'
                         [ctrlEnabled]='filters.controls.nameSort?.enabled'
                         [ctrlValue]='filters.controls.nameSort?.value'
                         [isDisabled]='(store.isActing$ | async)'
-                        (emitSorting)='updateSorting("nameSort")'
+                        [title]='constantDataService.FIELD_NAME.NAME | titlecase'
                       ></hidden-innovation-sorting-header-name>
                     </th>
-                    <td mat-cell *matCellDef='let element'
-                        [matTooltip]='element.name'> {{(element.name | maxStringLimit) || '--'}} </td>
+                    <td *matCellDef='let element' [matTooltip]='element.name'
+                        mat-cell> {{(element.name | maxStringLimit) || '--'}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef='updated_at'>
-                    <th mat-header-cell *matHeaderCellDef>
+                    <th *matHeaderCellDef mat-header-cell>
                       <hidden-innovation-sorting-header-date
-                        [title]='constantDataService.FIELD_NAME.DATE_MODIFIED | titlecase'
+                        (emitSorting)='updateSorting("dateSort")'
                         [ctrlEnabled]='filters.controls.dateSort?.enabled'
                         [ctrlValue]='filters.controls.dateSort?.value'
                         [isDisabled]='(store.isActing$ | async)'
-                        (emitSorting)='updateSorting("dateSort")'
+                        [title]='constantDataService.FIELD_NAME.DATE_MODIFIED | titlecase'
                       ></hidden-innovation-sorting-header-date>
                     </th>
-                    <td mat-cell *matCellDef='let element'> {{(element.updated_at | date: 'shortDate') || '--'}}</td>
+                    <td *matCellDef='let element' mat-cell> {{(element.updated_at | date: 'shortDate') || '--'}}</td>
                   </ng-container>
 
                   <ng-container matColumnDef='category'>
-                    <th mat-header-cell
-                        *matHeaderCellDef>
+                    <th *matHeaderCellDef
+                        mat-header-cell>
                       <div class='d-flex align-items-center justify-content-between'>
                   <span>
                     {{constantDataService.FIELD_NAME.CATEGORY | titlecase}}
                   </span>
                         <div class='d-flex align-items-center'>
-                          <button mat-icon-button class='mr-3' [matMenuTriggerFor]='typeMenu'
-                                  [disabled]='(store.isActing$ | async) || (this.categoryData.type === contentSelectorOpType.SINGLE && !this.categoryData?.limit)'
-                                  color='{{filters.controls.category?.value ? "primary" : ""}}'>
+                          <button
+                            [disabled]='(store.isActing$ | async) || (this.categoryData.type === contentSelectorOpType.SINGLE && !this.categoryData?.limit)'
+                            [matMenuTriggerFor]='typeMenu' class='mr-3'
+                            color='{{filters.controls.category?.value ? "primary" : ""}}'
+                            mat-icon-button>
                             <mat-icon style='font-size: 20px'>filter_list</mat-icon>
                           </button>
                           <mat-menu #typeMenu='matMenu'>
-                            <mat-selection-list color='primary' (selectionChange)='categoryFilterChange($event)'
-                                                [multiple]='true' class='pt-0'>
+                            <mat-selection-list (selectionChange)='categoryFilterChange($event)' [multiple]='true'
+                                                class='pt-0' color='primary'>
                               <mat-list-option value='NONE'>
                                 <h6 class='mat-h6'>None</h6>
                               </mat-list-option>
@@ -124,26 +130,26 @@
                         </div>
                       </div>
                     </th>
-                    <td mat-cell *matCellDef='let element'> {{((element.category | titlecase) || '--')}} </td>
+                    <td *matCellDef='let element' mat-cell> {{((element.category | titlecase) || '--')}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef='difficulty'>
-                    <th mat-header-cell
-                        *matHeaderCellDef>
+                    <th *matHeaderCellDef
+                        mat-header-cell>
                       <div class='d-flex align-items-center justify-content-between'>
                   <span>
                     {{constantDataService.FIELD_NAME.DIFFICULTY | titlecase}}
                   </span>
                         <div class='d-flex align-items-center'>
-                          <button mat-icon-button class='mr-3'
+                          <button [matMenuTriggerFor]='difficultyMenu' class='mr-3'
                                   color='{{filters.controls.level?.value ? "primary" : ""}}'
-                                  [matMenuTriggerFor]='difficultyMenu'>
+                                  mat-icon-button>
                             <mat-icon style='font-size: 20px'>filter_list</mat-icon>
                           </button>
                           <mat-menu #difficultyMenu='matMenu'>
-                            <mat-selection-list color='primary'
-                                                (selectionChange)='difficultyFilterChange($event)'
-                                                [multiple]='true' class='pt-0'>
+                            <mat-selection-list (selectionChange)='difficultyFilterChange($event)'
+                                                [multiple]='true'
+                                                class='pt-0' color='primary'>
                               <mat-list-option *ngFor='let diffType of difficultyIte' [value]='diffType'>
                                 <h6 class='mat-h6'>{{diffType | replaceUnderscore | titlecase}}</h6>
                               </mat-list-option>
@@ -152,30 +158,30 @@
                         </div>
                       </div>
                     </th>
-                    <td mat-cell *matCellDef='let element'> {{((element.difficulty | titlecase) || '--')}} </td>
+                    <td *matCellDef='let element' mat-cell> {{((element.difficulty | titlecase) || '--')}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef='input'>
-                    <th mat-header-cell
-                        *matHeaderCellDef>
+                    <th *matHeaderCellDef
+                        mat-header-cell>
                       <div class='d-flex align-items-center justify-content-between'>
                   <span>
                     {{constantDataService.FIELD_NAME.INPUTS | slice: 0: 5 | titlecase}}
                   </span>
                         <div class='d-flex align-items-center'>
-                          <button mat-icon-button class='mr-3'
+                          <button [matMenuTriggerFor]='inputTypeMenu' class='mr-3'
                                   color='{{filters.controls.type?.value ? "primary" : ""}}'
-                                  [matMenuTriggerFor]='inputTypeMenu'>
+                                  mat-icon-button>
                             <mat-icon style='font-size: 20px'>filter_list</mat-icon>
                           </button>
                           <mat-menu #inputTypeMenu='matMenu'>
-                            <mat-selection-list color='primary'
-                                                (selectionChange)='typeFilterChange($event)'
-                                                [multiple]='true' class='pt-0'>
+                            <mat-selection-list (selectionChange)='typeFilterChange($event)'
+                                                [multiple]='true'
+                                                class='pt-0' color='primary'>
                               <mat-list-option value='NONE'>
                                 <h6 class='mat-h6'>None</h6>
                               </mat-list-option>
-                              <ng-template ngFor [ngForOf]='testInputTypeIte' let-type>
+                              <ng-template [ngForOf]='testInputTypeIte' let-type ngFor>
                                 <mat-list-option [value]='type'>
                                   <h6
                                     class='mat-h6'>{{type === testInputTypeEnum.ONE_RM ? ('1RM') : (type | replaceUnderscore | titlecase)}}</h6>
@@ -191,24 +197,25 @@
                   </ng-container>
 
                   <ng-container matColumnDef='status'>
-                    <th mat-header-cell
-                        *matHeaderCellDef>
+                    <th *matHeaderCellDef
+                        mat-header-cell>
                       <div class='d-flex align-items-center justify-content-between'>
                   <span>
                     {{constantDataService.FIELD_NAME.STATUS | titlecase}}
                   </span>
                         <div class='d-flex align-items-center'>
-                          <button mat-icon-button class='mr-3'
+                          <button [disabled]='(store.isActing$ | async)' [matMenuTriggerFor]='statusMenu'
+                                  class='mr-3'
                                   color='{{filters.controls.published?.value ? "primary" : ""}}'
-                                  [matMenuTriggerFor]='statusMenu'
-                                  [disabled]='(store.isActing$ | async)'
-                                  color='{{filters.controls.published?.value ? "primary" : ""}}'>
+                                  color='{{filters.controls.published?.value ? "primary" : ""}}'
+                                  mat-icon-button>
                             <mat-icon style='font-size: 20px'>filter_list</mat-icon>
                           </button>
                           <mat-menu #statusMenu='matMenu'>
-                            <mat-selection-list color='primary'
-                                                (selectionChange)='updateFilterChange($event, filters.controls.published)'
-                                                [multiple]='false' class='pt-0'>
+                            <mat-selection-list
+                              (selectionChange)='updateFilterChange($event, filters.controls.published)'
+                              [multiple]='false'
+                              class='pt-0' color='primary'>
                               <mat-list-option [value]='"TRUE"'>
                                 {{publishStatusEnum.PUBLISHED | titlecase}}
                               </mat-list-option>
@@ -223,7 +230,7 @@
                         </div>
                       </div>
                     </th>
-                    <td mat-cell *matCellDef='let element'>
+                    <td *matCellDef='let element' mat-cell>
                       <hidden-innovation-common-data-field-status
                         [chipType]='element.isPublished ? statusChipType.SUCCESS : statusChipType.WARNING'
                         [text]='((element.isPublished ? publishStatusEnum.PUBLISHED : publishStatusEnum.UNPUBLISHED)  | titlecase)'
@@ -231,19 +238,19 @@
                     </td>
                   </ng-container>
 
-                  <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
-                  <tr mat-row *matRowDef='let row; columns: displayedColumns;'
-                      (click)='isLoading ? null : addToList(row)'
+                  <tr *matHeaderRowDef='displayedColumns' mat-header-row></tr>
+                  <tr (click)='isLoading ? null : addToList(row)' *matRowDef='let row; columns: displayedColumns;'
                       [ngClass]='{"active":isSelected(row)}'
-                      class='row-react'></tr>
+                      class='row-react'
+                      mat-row></tr>
                 </table>
               </div>
             </div>
-            <ng-template [ngIf]='store.isLoading$ | async' [ngIfElse]='noDataElse'></ng-template>
+            <ng-template [ngIfElse]='noDataElse' [ngIf]='store.isLoading$ | async'></ng-template>
             <ng-template #noDataElse>
               <div class='row'>
                 <div class='col-12 d-flex align-items-center justify-content-center'>
-                  <h4 class='mat-h4 mb-0 my-2 font-calibri' *ngIf='noData | async'>No Results Found</h4>
+                  <h4 *ngIf='noData | async' class='mat-h4 mb-0 my-2 font-calibri'>No Results Found</h4>
                 </div>
               </div>
             </ng-template>
@@ -257,12 +264,12 @@
       <mat-card class='p-3 d-flex align-items-center justify-content-between'>
         <h4 class='text-color__primary mat-h4 mb-0'>{{Count}}</h4>
         <mat-paginator
+          (page)='pageEvent = $event; onPaginateChange($event)'
           [disabled]='store.isLoading$ | async'
-          [pageSize]='pageSize'
           [length]='store.count$ | async'
           [pageIndex]='paginatorIndex'
           [pageSizeOptions]='pageSizeOptions'
-          (page)='pageEvent = $event; onPaginateChange($event)'
+          [pageSize]='pageSize'
         ></mat-paginator>
       </mat-card>
     </div>
