--- a/libs/shared/ui/questionnaire-selector/src/lib/questionnaire-selector.component.html
+++ b/libs/shared/ui/questionnaire-selector/src/lib/questionnaire-selector.component.html
@@ -40,6 +40,14 @@
 
                   <ng-container matColumnDef='select'>
                     <th mat-header-cell *matHeaderCellDef>
+                      <mat-checkbox
+                        *ngIf='!questionnaireData?.limit'
+                        (change)='masterToggle()'
+                        [checked]='isAllSelected'
+                        [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'
+                        [indeterminate]='!isAllSelected'
+                        color='primary'>
+                      </mat-checkbox>
                     </th>
                     <td mat-cell *matCellDef='let questionnaire'>
                       <mat-checkbox
