fix(test-selector): Add indeteminate indicator and selector in test selector component

--- a/libs/assessment/assessment-create/src/lib/assessment-create.component.html
+++ b/libs/assessment/assessment-create/src/lib/assessment-create.component.html
@@ -111,6 +111,7 @@
             </mat-card-content>
             <mat-card-actions>
               <button [matMenuTriggerFor]='menuPack'
+                      [disabled]='(store.isActing$ | async) || (store.isLoading$ | async)'
                       class='w-100' color='accent' mat-flat-button type='button'>
                 <mat-icon class='mr-2 mb-1'>add</mat-icon>
                 Add
