--- a/libs/test-group/test-group-create/src/lib/test-group-create.component.html
+++ b/libs/test-group/test-group-create/src/lib/test-group-create.component.html
@@ -126,7 +126,9 @@
           </mat-card-title>
           <mat-divider></mat-divider>
           <mat-card-content (cdkDropListDropped)='testGroupDragEvent($event)' cdkDropList>
-            <mat-card cdkDrag *ngFor='let test of (uiStore.selectedTests$ | async); first as isFirst; last as isLast; trackBy: trackByFn' [ngClass]='{"mt-4" : isFirst, "mb-0": isLast }'
+            <mat-card *ngFor='let test of (uiStore.selectedTests$ | async); first as isFirst; last as isLast; trackBy: trackByFn'
+                      [ngClass]='{"mt-4" : isFirst, "mb-0": isLast }'
+                      cdkDrag
                       class='mat-elevation-z3 p-3 mb-3'>
               <div class='container-fluid p-0'>
                 <div class='row'>
@@ -153,7 +155,7 @@
           <mat-card-actions>
             <button
               (click)='openTestSelector()'
-              [disabled]='!isCategoryValid'
+              [disabled]='!isCategoryValid || (store.isActing$ | async) || (store.isLoading$ | async)'
               class='w-100' color='accent' mat-flat-button
               type='button'>
               <mat-icon class='mr-2 mb-1'>add</mat-icon>
