feat(test-group-questionniare): Add select all feature on test-group & questionnaire

--- a/libs/shared/ui/test-group-selector/src/lib/test-group-selector.component.html
+++ b/libs/shared/ui/test-group-selector/src/lib/test-group-selector.component.html
@@ -45,7 +45,7 @@
                         (change)='masterToggle()'
                         [checked]='isAllSelected'
                         [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'
-                        [indeterminate]='!isAllSelected'
+                        [indeterminate]='someSelected'
                         color='primary'>
                       </mat-checkbox>
                     </th>
