--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -279,7 +279,20 @@
                     > {{(element.id) || '--'}} </td>
                   </ng-container>
                   <ng-container matColumnDef='video_plays'>
-                    <th mat-header-cell *matHeaderCellDef>{{'Total Video plays' | titlecase}}</th>
+                    <th mat-header-cell *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                        <span>{{'Total Video Plays' | titlecase}}</span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3'
+                                  [disabled]='(store.isActing$ | async)'
+                                  color='{{filtersPackEng.controls.videoplaySort.enabled  ? "primary" : ""}}'
+                                  (click)='updatePackSorting("videoplaySort")'>
+                            <mat-icon
+                              style='font-size: 20px;'>{{filtersPackEng.controls.videoplaySort?.enabled ? (filtersPackEng.controls.videoplaySort?.value === sortingEnum.ASC ? "arrow_upward" : "arrow_downward") : "sort" }}</mat-icon>
+                          </button>
+                        </div>
+                      </div>
+                    </th>
                     <td mat-cell *matCellDef='let element'
                     > {{(element.video_plays) === null ? '--' : element.video_plays}} </td>
                   </ng-container>
