--- a/libs/goals/create-goals/src/lib/create-goals.component.html
+++ b/libs/goals/create-goals/src/lib/create-goals.component.html
@@ -1,1 +1,95 @@
-<p>create-goals works!</p>
+<div  class='p-4'>
+  <div class='container-fluid p-0'>
+    <div class='row mb-4'>
+      <div class='col-12 d-flex align-items-center justify-content-end'>
+        <button
+          [routerLink]="['/goals']" class='ml-3'
+          mat-stroked-button
+          type='button'>
+          Cancel
+        </button>
+        <button
+          class='ml-3'
+          color='primary' mat-flat-button type='submit'>
+          Save
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class='container-fluid p-0'>
+    <div class='row'>
+      <div class='col-lg-6 col-12'>
+        <mat-card>
+          <mat-card-content>
+            <div class='container-fluid p-0 '>
+              <div class='row mb-3'>
+                <div class='col-12'>
+                  <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
+                    General</h5>
+                </div>
+              </div>
+              <div class='row mb-2'>
+                <div class='col-12'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>{{constantDataService.FIELD_NAME.GOAL_HEADER | titlecase}}</mat-label>
+                    <input   matInput>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='row mb-2'>
+                <div class='col-12'>
+                  <hidden-innovation-common-form-field-textarea
+                    [label]="'Description'"
+                  ></hidden-innovation-common-form-field-textarea>
+                </div>
+              </div>
+              <div class='row mb-3'>
+                <div class='col-12'>
+                  <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
+                    REMINDER</h5>
+                </div>
+              </div>
+              <div class='row mb-2'>
+                <div class='col-12'>
+                  <hidden-innovation-common-form-field-textarea
+                    [label]="'Body'"
+                  ></hidden-innovation-common-form-field-textarea>
+                </div>
+              </div>
+              <div class='row mb-2'>
+                <div class='col-12'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>{{constantDataService.FIELD_NAME.QUESTIONS | titlecase}}</mat-label>
+                    <input   matInput>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='row mb-2'>
+                <div class='col-12'>
+                  <hidden-innovation-common-form-field-number
+                    label='Reminder(Days)'
+                    [errorMessage]=formValidationService.lockOutValidationMessage
+                  ></hidden-innovation-common-form-field-number>
+                </div>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </div>
+      <div class='col-lg-6 col-12'>
+        <mat-card>
+          <mat-card-title class='d-flex justify-content-between align-items-center'>
+            <h3 class='mat-h3 mb-0 font-sf-pro'>Contents</h3>
+            <button
+              class='ml-3'
+              color='primary' mat-flat-button type='button'>
+              Add
+            </button>
+
+          </mat-card-title>
+          <mat-divider></mat-divider>
+        </mat-card>
+      </div>
+    </div>
+  </div>
+</div>
