--- a/libs/goals/create-goals/src/lib/create-goals.component.scss
+++ b/libs/goals/create-goals/src/lib/create-goals.component.scss
@@ -1,6 +1,6 @@
 .answersGrid {
   display: grid;
-  grid-template-columns: 15% auto 40px;
+  grid-template-columns: auto 40px;
   column-gap: 1.25rem;
   row-gap: 1.25rem;
 }
